# mydream-social-backend

./: .env.example  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  broker.Dockerfile  migrations.Dockerfile
migrations/mydream_social/: 0_20241019163405_init.py  1_20241020112911_update.py
src/: broker.py  cache.py  database.py  main.py
src/config/: __init__.py  config.py
src/dependencies/: auth.py  users.py
src/models/: __init__.py  base.py  models.py  signals.py
src/processors/: matrix_factorization.py
src/routers/: __init__.py  auth.py  recommendations.py  users.py
src/schemas/: auth.py  users.py
src/tasks/: process_recommendations.py  update_avatars.py
src/utils/: auth.py  avatar.py
